--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     Coded by <a href="#">Ayushh Khare</a>.
   </footer>
 
-  <script src="/script.js"></script>
+  <script src="script.js"></script>
 
 </body>
 
